--- a/server-1/package.json
+++ b/server-1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "server-1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,12 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^5.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
   }
 }
