--- a/server-1/package.json
+++ b/server-1/package.json
@@ -2,15 +2,25 @@
   "name": "server-1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
-    "express": "^5.1.0"
+    "@google-cloud/language": "^7.2.0",
+    "@google-cloud/video-intelligence": "^6.2.0",
+    "@google-cloud/vision": "^5.3.3",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "mongoose": "^8.18.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
